2006-04-30  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/nsmain.c: Reorganized so first call to a Tcl_FindExecutable()
	is done after all ns_fork's - see large comment in-place.
	Assure Tcl version is logged to the log-file.
	Added descriptive run state enumerator so run states can now be
	easier tracked by looking at the code.

	* nsd/binder.c: Made ifdef _WIN32 more clear and unified.
	At some point we should create separate file in order not
	to obfuscate code with numerous ifdef's.
	
2006-04-22  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/Makefile:
	* nsd/event.c: Add new event driven I/O API. Unlike the existing
	task and sockcallback mechanisms, this deals only with IO, not threads
	and allocates no memory at runtime, making it suitable for the
	main driver thread, spooler etc.  Things should be merged at
	some point.

2006-04-19  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/nsconf.c:	
	* nsd/server.c:
	* nsd/fastpath.c:
	* tests/test.nscfg: Make page cache process global rather than per
	virtual server.

2006-04-19  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/driver.c: Perform reverse lookup on hostname given the IP
	address only if hostname param not specified in nssock section
 	for the socket driver.
        In some situations, reverse lookup will not be successful which
	inhibits us to start properly (which we could). 

	* nsd/tclinit.c: Removed traces of ns_tls support.
 
2006-04-18  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tclinit.c:
	* nsd/tclcmds.c: Remove ns_tls implementation

2006-04-18  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/ns_schedule.test: Add a couple of tests for scheduled
	procs.

	* nsd/cache.c:
	* nsd/dns.c:
	* nsd/nsconf.c: Use new API for DNS cache code.

	* nsd/nsmain.c:
	* nsd/tclinit.c: Run command interpreter in seperate thread,
	leaving main thread to shut down the server cleanly when the exit
	command is run.
